# MyApp

./: meson.build
data/: MyApp.metainfo.xml
src/: Application.vala
